[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MyFirstPyPackage"
version = "0.0.1"
authors = [
  { name="Jeremy Juybari"},
]
description = "A small example package taken from https://packaging.python.org/en/latest/tutorials/packaging-projects/ This example package provides a template for ECE 198"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jeremyJJB/ECE198ExPyPackage"
"Bug Tracker" = "https://github.com/jeremyJJB/ECE198ExPyPackage/issues"